create github pages

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-black text-primary display-4" href="index.html#top">
+                        <a class="nav-link link mbr-black text-black text-primary display-4" href="index.html#header5-j">
                             HOME</a>
-                    </li><li class="nav-item"><a class="nav-link link mbr-black text-black text-primary display-4" href="youthhelp.html#top">
+                    </li><li class="nav-item"><a class="nav-link link mbr-black text-black text-primary display-4" href="youthhelp.html#header6-n">
                             Youth Program</a></li></ul>
 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#">DONATE</a></div>
@@ -445,7 +445,7 @@ We are ready to help you</h4>
             <div class="col-lg-4 card mx-auto mbr-form">
                 <div class="col-wrap1" data-form-type="formoid">
                     <!--Formbuilder Form-->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gTZ6xgsqaAZMO+EERqQxOj9zXJoBIn20Ux0qZmXZLC9AXAQX2VekKScIbKiRtBE/dwga6+YA4fOIIVdNIJ6O9ZZL+2f/CU659HFZhKGzaa+p+pqyouAZHdGQkjYVTc9f.v2ErsWFouR3s1N3QP6owpEodvCtHpMi3+2t1p9CntcyoCwSwkcQZZgaEhhIMpi6j9jcvr0hPCXqfBU1ZQtIjY1Acl2pCICIozFf/999qrc9/GywfMqtMNufwOECichDN">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Lkc6uT3etKnv2b+JAjfRQaxB+tJzQWe6Zh4XgRRpKZ5fFDXj+tOx+b0CGopiCW9/sTvAYa3Mfxog2l94g5ATuVlShbDDNgPRUXaqeUhC5MVorEkCZqdRJsZyy5CweN+w.42/jUZ5sBYrMgaPVroFDHL4aVMUF+MH12eExVWSK+/V2h3t6FbG4YMJr3SR/nf54J0Gd1ageoUJB0uSYXPlwJl2tVniTmihPYIjkpMxinYt6uRIBgka9JsfgXDKiDmYp">
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
