create github pages

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:image:src" content="">
-  <meta property="og:image" content="">
-  <meta name="twitter:title" content="Home">
+  <meta name="twitter:image:src" content="assets/images/index-meta.jpeg">
+  <meta property="og:image" content="assets/images/index-meta.jpeg">
+  <meta name="twitter:title" content="The Believers">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo-no-words-112x112.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/mbr-favicon.png" type="image/x-icon">
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>The Believers</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/icon54/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -445,7 +445,7 @@ We are ready to help you</h4>
             <div class="col-lg-4 card mx-auto mbr-form">
                 <div class="col-wrap1" data-form-type="formoid">
                     <!--Formbuilder Form-->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NpCA9rFK0PXCDuYaLIuCEd3mbCIy7wdMKeycFCTsoJZ9BaOHFYRVSdg+z5oDbgxm1tWuvu1ruMVW4yxXwSyauPsoO58gNMIq3yn0BlAhAdxGPIRBAJCgptMOJltBkDUz.RoXe4vm7w8fEs8A8djaXxGZ6w6MocFjy6QQGMEVoT2Y4vUcRDsXUrT9caiA80swxD0a99k7z4f7Qsd8cYZBsOH2ClT51J2t+WquT9Xx6Li4Nr45tjSYv2QQiITLa7YdX">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6ovOgiiSZKnSg45zCW/Ubwr8UskwGW25q9Somr1f92n3iIagsQ0kXaz9jn0yR7dyXTbAha8cvP6RBY/pJO9TlDqcZdKA/2PuIJeKCbhzKD9RZZjQjmr63ZyW/lxQIE4k.4UwYHOvJWe1oORJmVVsnSm2nkzwWQMv2KNob9W89lM1a9FcTNqgvjCvBwrhlzTvzdlVJ6d7QGrgmMP1f8avSooloO+6X7swVwl72yQSHQ/62wW1X9JwD/sQPnN39EMe+">
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
