create github pages

--- a/index.html
+++ b/index.html
@@ -247,16 +247,16 @@ We are ready to help you</h4>
                 <div class="col-12 col-md-12 col-lg-6">
 
 
-                    <div id="bootstrap-accordion_9" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                    <div id="bootstrap-accordion_2" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse1_9" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse1_2" aria-expanded="false" aria-controls="collapse1">
                                     <h5 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Group members
                                     </h5>
                                 </a>
                             </div>
-                            <div id="collapse1_9" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_9">
+                            <div id="collapse1_2" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                         People returning home go through a wide range of thinking and emotional issues. Our programs are designed by those who have faced the same issues and have solutions that work.</p>
@@ -265,14 +265,14 @@ We are ready to help you</h4>
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse2_9" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse2_2" aria-expanded="false" aria-controls="collapse2">
                                     <h5 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>How it works
                                     </h5>
                                 </a>
 
                             </div>
-                            <div id="collapse2_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_9">
+                            <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                         You can choose the program that you want to attend. You create your program from our list of services.&nbsp; You will be assigned a person who can coach you through the process.</p>
@@ -281,13 +281,13 @@ We are ready to help you</h4>
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse3_9" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse3_2" aria-expanded="false" aria-controls="collapse3">
                                     <h5 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Program duration
                                     </h5>
                                 </a>
                             </div>
-                            <div id="collapse3_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_9">
+                            <div id="collapse3_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">The length of each program varies depending on the topic. Also, you have the option to repeat a session or request special help.&nbsp;</p>
                                 </div>
@@ -295,13 +295,13 @@ We are ready to help you</h4>
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingFour">
-                                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse4_9" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse4_2" aria-expanded="false" aria-controls="collapse4">
                                     <h5 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>First results
                                     </h5>
                                 </a>
                             </div>
-                            <div id="collapse4_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_9">
+                            <div id="collapse4_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                         The first results of each program is stability and direction to a solution. We work with to determine the best course of action for you.&nbsp;</p>
@@ -445,7 +445,7 @@ We are ready to help you</h4>
             <div class="col-lg-4 card mx-auto mbr-form">
                 <div class="col-wrap1" data-form-type="formoid">
                     <!--Formbuilder Form-->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6N8jfaXHzOSJVJT7gYu1TU8FuSiuxRqE0hW0bHK3tR3noi762wdNTPENqmBRDzPtqlIqJIJh+/ojPX+jbRRfOhwlDHtGFfGekaFQNa6DwGSyMFI++rIWDxwa4GnzKDEj.OmQ9/up/Da4bnDuNOXIMyDYDek70QwrxTtDHVcTuesTsfPBnoUdq9MQPUru8rZVd4aoOw2Kn4zziZlTemIjzAqfCj45lIKlm8fPefdUHo0yQKuisYd6FGlpN9LgTS6M5">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="622zS9/Ot72ZTjeVlPDT7cmL/GznFitm4YAun8my/M8uxqdSs1p5MFp9dqKPsyqK3Q0BkW/fy24ooz8z1++RcFxJk69hDySIeQy80kgjX6o+FTjCM5qeQroYgQZCSUVQ.VkJnzR3a7BbLsaCJyboWHeGH0DFKwXX0xQsuY3Uab1rKBa3GofjffjsjRUcAtfR4b3lBGKrmEWrBGzSsr2N40ldxv+T7MPI8I7xtzZ+rWrAhKM9zgmLhHtU9p7Ts37Xx">
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -657,13 +657,10 @@ We are ready to help you</h4>
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="img-wrapper">
-                        <img src="assets/images/debra-gillespie-2-758x877.jpg" alt="">
+                        <img src="assets/images/debra-gillespie-2-758x877.jpg" alt="Debra Gillespie">
 
                         <div class="text-wrap">
-                            <p class="mbr-text pb-2 mbr-regualr mbr-fonts-style display-4">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Vestibulum in fermentum tellus.
-                            </p>
+                            <p class="mbr-text pb-2 mbr-regualr mbr-fonts-style display-4">Debra Gillespie is a native Milwaukeean, wife and mother with a strong belief that the response to faith is action. Debra promotes equity and advocates for community issues.</p>
 
                             
                         </div>
@@ -928,7 +925,7 @@ We are ready to help you</h4>
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
 </section>
 
 
