--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="info-widget">
                     <span class="widget-icon mbr-iconfont mobi-mbri-phone mobi-mbri" style="color: rgb(158, 158, 158); fill: rgb(158, 158, 158);"></span>
                     <div class="widget-content display-4">
-                        <p class="widget-title mbr-fonts-style display-4">+414-526-9371</p>
+                        <p class="widget-title mbr-fonts-style display-4">+414-999-8721</p>
                     </div>
                 </div>
 
@@ -147,8 +147,7 @@
         <div class="row justify-content-center">
             <div class="mbr-black col-md-12 col-lg-12">
                 
-                <h1 class="mbr-section-title mbr-bold mbr-white pb-2 mbr-fonts-style display-1">
-                    <span>&nbsp; The&nbsp; &nbsp;&nbsp;</span><br><span>&nbsp;Believers&nbsp;<br>
+                <h1 class="mbr-section-title mbr-bold mbr-white pb-2 mbr-fonts-style display-1"><span>&nbsp;The&nbsp;</span><span>Believers<br>
                         &nbsp;for Change<br>
                     </span>
                 </h1>
@@ -431,7 +430,7 @@ We are ready to help you</h4>
 
             <div class="mbr-black card col-md-12 col-lg-4">
 
-                <img src="assets/images/family2-762x1142.jpg" alt="">
+                <a href="index.html#header5-j"><img src="assets/images/family2-762x1142.jpg" alt="MKE Block"></a>
             </div>
 
 
@@ -443,7 +442,7 @@ We are ready to help you</h4>
             <div class="col-lg-4 card mx-auto mbr-form">
                 <div class="col-wrap1" data-form-type="formoid">
                     <!--Formbuilder Form-->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kHwdhbC5qVIdU8Vf8NWtgrQ7dPlD3hzY8wHwRbT4K+TYNpv3CvEaTE9aehRM4FDOnff88HgDyN8424tp6h8sC/MuIEkXt4KXn7xFqzWT4OlPWRARnPKM4zUtnUNs8nF0.RQY5yKUtZe3hXKuA0UeW3kfQCPoPsXCunwafM1zPYYBMjANu0TYdFBqJRt7tKiOc3kJlrx5YFQrzJ9FW7UOc9+1dzkSBvzVjIvlpd+jj0TmkbznFu3AqamrRlGyaE/Zu">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ThG593psZs9YGX74+q+x+qBpYUVr6h9pL8rPHvABPOKexxGv0hnf7ND3K+c9BZS6GP+XHM5GNrICevAaDeoIATjONay5Y7RpV57+aSwF+Amuc7DFylQYf9nfdWaWuIWP.FsmSsV9FP9flkV4FNcIaHjj54s5ZFA1Eeh8cOWEURhUYPir9YGnUHGg6PtEaOQF+erTjXR5zwAbLDy+6Gitj8IKS7lnko2UvYZvYLOLswIIrqLLrtZlfbxGPRyODSQxy">
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -672,7 +671,7 @@ We are ready to help you</h4>
                     <div class="card-box align-left">
                         <h4 class="card-title align-left mbr-regular mbr-black mbr-fonts-style display-5">
                             Sylvester Jackson</h4>
-                        <h3 class="mbr-section-subtitle pb-2 mbr-regular mbr-fonts-style display-4">LEAD ORGANIZER</h3>
+                        <h3 class="mbr-section-subtitle pb-2 mbr-regular mbr-fonts-style display-4">Lead Organizer</h3>
                     </div>
                 </div>
             </div>
@@ -692,8 +691,7 @@ We are ready to help you</h4>
                         <h4 class="card-title align-left mbr-regular mbr-black mbr-fonts-style display-5">
                             Debra Gillespie</h4>
                         <h3 class="mbr-section-subtitle pb-2 mbr-regular mbr-fonts-style display-4">
-                            DIRECTOR
-                        </h3>
+                            Director</h3>
                     </div>
                 </div>
             </div>
@@ -925,7 +923,7 @@ We are ready to help you</h4>
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=8535 W. Capital Drive Suite 2Milwaukee, WI 53222" allowfullscreen=""></iframe></div>
+    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=8535 W. Capital Drive Suite 2Milwaukee, WI 53222" allowfullscreen=""></iframe></div>
 </section>
 
 
