create github pages

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ We are ready to help you</h4>
             <div class="col-lg-4 card mx-auto mbr-form">
                 <div class="col-wrap1" data-form-type="formoid">
                     <!--Formbuilder Form-->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ThG593psZs9YGX74+q+x+qBpYUVr6h9pL8rPHvABPOKexxGv0hnf7ND3K+c9BZS6GP+XHM5GNrICevAaDeoIATjONay5Y7RpV57+aSwF+Amuc7DFylQYf9nfdWaWuIWP.FsmSsV9FP9flkV4FNcIaHjj54s5ZFA1Eeh8cOWEURhUYPir9YGnUHGg6PtEaOQF+erTjXR5zwAbLDy+6Gitj8IKS7lnko2UvYZvYLOLswIIrqLLrtZlfbxGPRyODSQxy">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rEm4sucmef+T3idu/YLdKJFahMd6QhOtkO5sc7dPShjbTqHaljXqVE6cOqiID7VEwGbJQLYqYWgats5auwb+qJdhBSUxOyF/EbFbLEaN8PRlFN8nWuIvqI/i+umxLMPV.hPjO49dZPnMrZ7sq0lE1URo7BVnWCbEgB1pmJO0vHFSYB0rFRh8w36+GjZ/ebM4r5fESKozuCnZHv/aOD/d0Fpt82P8Rr9bbsMi6IqKfFkSDCZIPgtjcH6ZXJsDcs8Z9">
                         <div class="form-row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -699,12 +699,11 @@ We are ready to help you</h4>
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="img-wrapper">
-                        <img src="assets/images/toran-552x981.jpeg" alt="Toran">
+                        <img src="assets/images/toran-552x981.jpeg" alt="Toran Brooks">
 
                         <div class="text-wrap">
                             <p class="mbr-text pb-2 mbr-regualr mbr-fonts-style display-4">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Vestibulum in fermentum tellus.
+                                Toran Brooks is a valuable member of our community engagement team.
                             </p>
 
                             
@@ -723,10 +722,7 @@ We are ready to help you</h4>
                         <img src="assets/images/yang-pic-552x567.jpg" alt="">
 
                         <div class="text-wrap">
-                            <p class="mbr-text pb-2 mbr-regualr mbr-fonts-style display-4">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Vestibulum in fermentum tellus.
-                            </p>
+                            <p class="mbr-text pb-2 mbr-regualr mbr-fonts-style display-4">He is the&nbsp;Believers For Change Transporter Staff after his own experience of not being able to retainemployment because of the lack of transportation.</p>
 
                             
                         </div>
